# dotfiles

./: .Brewfile  .Makefile  .bash_profile  .bashrc  .bashrc.include  .dir_colors  .gemrc  .gitconfig  .gitignore  .gitignore.global  .gitmodules  .golangci.toml  .golangci.yml  .inputrc  .minttyrc  .rainbow_config.json  .textlintrc  .tmux.conf  .vimrc  .zshrc  Brewfile  Dockerfile  Gemfile  Makefile  Pipfile  README.md  Vagrantfile  brew-setup  brew-setup.sh  go.mod  go.sum  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  setup  setup-brew.sh  setup.sh  tools.go
.bashrc.d/: aliases  aliases.sh  cocot  common  common.sh  create-password  cygwin  docker  docker.sh  fzf.sh  peco  tmux  trash  windows  workspace  workspace.sh
.bin/: aknife  battery  cat-tmux  clean  json2json  json2toml  json2yaml  multi  num2bar  pfx2certs  pw-gen  ssh-config  ssh-config-docker  ssh-config-vagrant  ssh-copy-id  ssh-pfw  tmux-status  to  toml2json  toml2toml  toml2yaml  yaml2json  yaml2toml  yaml2yaml
.bin/templates/: compose2ecs.tmpl  compose2fleet.tmpl
.config/: starship.toml
.config/alacritty/: alacritty.yml
.config/fish/: config.fish
.mutt/: muttrc  oauth2.py
.shrc.d/: aliases.sh
.tmux.d/: color.conf
.vim/: .gitignore  coc-settings.json  package.json  vimrc
gotools/: go.mod
pythoner/: Makefile
rubyist/: Gemfile
scripts/: Brewfile  Brewfile.lock.json  apt-installer  brewfile  brewfile-cask  brewfile-installer.rb  brewfile-installer.sh  cask.brewfile  dotfiles-setup  go-cmd-installer  go-tools-installer  pcurl.js  scalabin-installer
(+165 files in other folders)
