[tool.poetry]
name = "dotfiles"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
bandit = "^1.6.2"
yapf = "^0.30.0"
flake8 = "^3.8.2"
mccabe = "^0.6.1"
pycodestyle = "^2.6.0"
pyflakes = "^2.2.0"
pydocstyle = "^5.0.2"
# ginza = "^3.1.2"
html2text = "^2020.1.16"
sumy = "^0.8.1"
tinysegmenter = "^0.4"
numpy = "^1.19.4"
sqlfluff = "^0.3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
